# pvm

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/: CODEOWNERS
.github/workflows/: ci.yml
cmake/: pvmConfig.cmake.in
dev/bench/: data.js
include/pvm/: pvm.h
include/pvm/bytecode/: bytecode.h  bytecode_decoder.h  instruction_decoder.h  instruction_encoder.h
include/pvm/codegen/: assembler.h  codegen.h  codegen_types.h  macro_assembler.h
include/pvm/engine/: architecture.h  context.h  instructions.h  interpreter.h
include/pvm/utilities/: platform.h  utilities.h
tests/: CMakePresets.json
tests/assets/: crypto.h
tests/benchmark/: CMakeLists.txt  CMakePresets.json  benchmark.cpp  benchmark.h  vcpkg.json
tests/unittest/: CMakeLists.txt  unittest.cpp  unittest_crypto.h  unittest_fixture.h  unittest_macro.h  unittest_primitive.h  vcpkg.json
